// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader should render correctly with prop 1`] = `
<div
  className="loader-container"
>
  <div
    className="loader-icon"
  />
  <div
    className="loader-message"
  >
    loading text added here
  </div>
</div>
`;

exports[`Loader should render correctly without prop 1`] = `
<div
  className="loader-container"
>
  <div
    className="loader-icon"
  />
  <div
    className="loader-message"
  >
    Loading data...
  </div>
</div>
`;
